# embedded-world-demo-zenoh-flow

./: .gitignore  README.md  commands.txt  distance-alert.yml  start-zenoh.sh  zenoh-config.json
compute-miminum-distance/: compute-minimum-distance.yml
compute-minimum-distance/: compute-minimum-distance.py  compute-minimum-distance.yml
compute-movement/: compute-movement.py  compute-movement.yml
compute-proximity/: compute-proximity.py  compute-proximity.yml
lidar-process/: lidar-process.py  lidar-process.yml
zenoh-sink/: Cargo.toml  zenoh-sink.yml
zenoh-sink/src/: lib.rs
zenoh-source/: Cargo.toml  zenoh-source.yml
zenoh-source/src/: lib.rs
